Added the possibility to disable the viewfinder text hook and the ability to change the viewfinder dimension.